# recsys-agent-harness

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  default_llm.yaml  large_llm.yaml
data/corpus/: recsys_docs.jsonl  recsys_recent_2024_2025_300.jsonl
data/tasks/: recsys_recent_2024_2025_tasks.jsonl  sample_tasks.jsonl
notebooks/: analyze_benchmark_report.ipynb
notebooks/plot_results/large_llm_run0/: snapshot_1_summary_table.csv
notebooks/plot_results/large_llm_run1/: snapshot_1_summary_table.csv
scripts/: build_recent_recsys_corpus.py  run_benchmark.py
src/agentic_bench/: __init__.py  config.py  evaluator.py  llm_utils.py  runner.py  schemas.py  tasks.py  tools.py
src/agentic_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_bench/agents/: base.py  baseline.py  planner_executor.py  react_agent.py
