[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-bench"
version = "0.1.0"
description = "Benchmark harness for comparing tool-using research agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
